# soroban-meter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/soroban-meter/: Cargo.toml
crates/soroban-meter-cli/: Cargo.toml
crates/soroban-meter-cli/src/: main.rs  output.rs  simulate.rs
crates/soroban-meter/src/: budget.rs  lib.rs  report.rs
examples/token-transfer/: Cargo.toml
examples/token-transfer/src/: lib.rs  test.rs
