[workspace]
members = [
    "crates/soroban-meter",
    "crates/soroban-meter-cli",
    "examples/token-transfer"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gideon Bature"]
repository = "https://github.com/GideonBature/soroban-meter"

[workspace.dependencies]
soroban-sdk = "27.0.0"
soroban-meter = { path = "crates/soroban-meter", version = "0.1.0" }
comfy-table = "7.1.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
